--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         main {
             width: auto;
-            margin: 5rem;
+            margin: 5rem 25rem;
         }
         .introduction {
             display: flex;
@@ -35,6 +35,10 @@
             align-items: center;
             gap: 0.25rem;
 
+        }
+        .introduction-name > img {
+            width: 6rem;
+            border-radius: 1rem;
         }
         .introduction-name > h1 {
             margin: 0;
@@ -80,6 +84,7 @@
     <main>
         <section class="introduction">
             <div class="introduction-name">
+                <img alt="Daniil's avatar" src="https://lh3.googleusercontent.com/a/ACg8ocKkp2cxsX99Aa_fy1KVXMueG9z-uhD593aNJ3F3qHFNM82Ul55v=s96-c-rg-br25">
                 <h1>Daniil Nikulin</h1>
                 <span><mark>aka</mark> danmaninc, dminc</span>
                 <p class="introduction-description">Hello! I am 19 y.o. <mark>web developer</mark> and <mark>Computer Science</mark> student from <a href="https://innopolis.university">Innopolis University</a>.
