chore: remove extra link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span><mark>aka</mark> danmaninc</span>
                 <p class="introduction-description">Hello! I am 19 y.o. <mark>web developer</mark> and <mark>Computer Science</mark> student from <a href="https://innopolis.university">Innopolis University</a>.
                     <br>I love learning web development and applying my skills to projects. <br> <br>
-                    I am interested in <mark>collaborating to awesome projects</mark>. If you have one — <span style="text-decoration: underline;">contact</span> me. <br> I would be happy to discuss it with you, my friend!
+                    I am interested in <mark>collaborating to awesome projects</mark>. If you have one — contact me. <br> I would be happy to discuss it with you, my friend!
                 </p>
             </div>
         </section>
