style: introduction text

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <img alt="Daniil's avatar" src="https://lh3.googleusercontent.com/a/ACg8ocKkp2cxsX99Aa_fy1KVXMueG9z-uhD593aNJ3F3qHFNM82Ul55v=s96-c-rg-br25">
                 <h1>Daniil Nikulin</h1>
                 <span><mark>aka</mark> danmaninc</span>
-                <p class="introduction-description">Hello! I am 19 y.o. <mark>web developer</mark> and <mark>Computer Science</mark> student from <a href="https://innopolis.university">Innopolis University</a>.
+                <p class="introduction-description">Hello! I am a 19 y.o. <mark>web developer</mark> and <mark>Computer Science</mark> student from <a href="https://innopolis.university">Innopolis University</a>.
                     <br>I love learning web development and applying my skills to projects. <br> <br>
-                    I am interested in <mark>collaborating to awesome projects</mark>. If you have one — contact me. <br> I would be happy to discuss it with you, my friend!
+                    I am interested in <mark>collaborating on awesome projects</mark>. If you have one — contact me. <br> I would be happy to discuss it with you, my friend!
                 </p>
             </div>
         </section>
