--- a/hw2/index.html
+++ b/hw2/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="stylesheet" href="/hw2/hw2.css"/>
+    <link rel="stylesheet" href="hw2.css"/>
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <title>Homework 2 — XKCD comic</title>
 </head>
