fix: hw2 js bundle file

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -18,6 +18,6 @@
             <button type="button" id="get-comic-btn">Load comic</button>
         </section>
     </main>
-    <script src="/dist/bundle.js"></script>
+    <script src="../dist/bundle.js"></script>
 </body>
 </html>
